More Java 15 updates
- Added JPMS metadata
- Converted build to Gradle 7
- Replaced Base64 codec with JRE provided one
- Bump version to 4.0
- Experiment to load plugins from classpath